Closed
Bug 397259
Opened 18 years ago
Closed 18 years ago
sync event constants (GetStringEventType)
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: surkov, Assigned: surkov)
Details
Attachments
(1 file, 1 obsolete file)
2.48 KB,
patch
|
aaronlev
:
review+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
No description provided.
Attachment #282016 -
Flags: review?(aaronleventhal)
Comment 1•18 years ago
|
||
Comment on attachment 282016 [details] [diff] [review]
patch
I guess since events are defined in public IDL it would be difficult to use the trick Neil showed us to ensure sync'd arrays, with the #include and #define's using ##
Attachment #282016 -
Flags: review?(aaronleventhal) → review+
Assignee | ||
Comment 2•18 years ago
|
||
add an assertion
Attachment #282016 -
Attachment is obsolete: true
Attachment #282055 -
Flags: review?(aaronleventhal)
Assignee | ||
Comment 3•18 years ago
|
||
(In reply to comment #1)
> (From update of attachment 282016 [details] [diff] [review])
> I guess since events are defined in public IDL it would be difficult to use the
> trick Neil showed us to ensure sync'd arrays, with the #include and #define's
> using ##
>
At least I don't see the way.
Updated•18 years ago
|
Attachment #282055 -
Flags: review?(aaronleventhal) → review+
Assignee | ||
Updated•18 years ago
|
Attachment #282055 -
Flags: approval1.9?
Updated•18 years ago
|
Attachment #282055 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 4•18 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•