Bug 397259 - sync event constants (GetStringEventType), r=aaronlev, a=dsicore