accessible/src/base/nsAccessibilityService.h
@@ -350,6 +350,7 @@ static const char kEventTypeNames[][40] = {
   "hypertext changed",                       // EVENT_HYPERTEXT_CHANGED
   "hypertext links count changed",           // EVENT_HYPERTEXT_NLINKS_CHANGED
   "object attribute changed",                // EVENT_OBJECT_ATTRIBUTE_CHANGED
+  "page changed",                            // EVENT_PAGE_CHANGED
   "internal load",                           // EVENT_INTERNAL_LOAD
   "reorder"                                  // EVENT_REORDER
 };
